# content-aggregator

./: .gitignore  README.md  exceptions.py  extract_urls.py  gemini_api.py  llm.py  main.py  openrouter_api_script.py  pyproject.toml  pytest.ini  requirements.txt  scraper.py  utils.py
.github/workflows/: ci.yml  run.yml
scripts/: create_issue_body.sh  md_executive_summary.sh  md_processed_articles.sh  run.sh
src/content_aggregator/: __init__.py  gemini_api.py  llm.py  models.py  scraper.py  utils.py
tests/: test_llm.py  test_scraper.py  test_utils.py
