[project]
name = "content-aggregator"
version = "0.1.0"
description = "Web Content Summarizer"
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project.scripts]
content-aggregator = "content_aggregator:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "pytest-cov",
    "mypy>=1.0",
    "flake8>=5.0",
    "types-requests>=2.28.0"
] 