[project]
name = "content-aggregator"
version = "0.1.0"
description = "Web Content Summarizer"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "beautifulsoup4==4.12.2",
    "requests-html==0.10.0",
    "lxml[html_clean]==5.2.1",
    "python-dotenv==1.0.0",
    "feedparser==6.0.11",
    "google-generativeai==0.8.4",
    "pypdf==3.17.1",
    "playwright==1.49.1",
    "click==8.1.7"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project.scripts]
content-aggregator = "content_aggregator:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "pytest-cov",
    "mypy>=1.0",
    "flake8>=5.0",
    "types-requests>=2.28.0",
    "bandit>=1.7.5",
    "safety>=2.3.5"
] 